<resources>
    <string name="app_name">Jobscan</string>
    <string name="welcome_to_jobscan">Welcome to Jobscan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="connections">Connections</string>
    <string name="profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="user_name">User Name</string>
    <string name="post_content">Post Content</string>
    <string name="search">Search</string>
    <string name="action_search">Search in Posts</string>
    <string name="search_in_posts">Search in Posts</string>
    <string name="designation">Designation</string>
    <string name="connection_status">Connection Status</string>
    <string name="user_type">User Type</string>
    <string name="phone_number">Phone Number</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="education_qualification">Education Qualification</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="candidate">Candidate</string>
    <string name="recruiter">Recruiter</string>
    <string name="Post_date">Post Creation Date</string>
    <string name="logo">logo</string>
</resources>