<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:elevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <LinearLayout
        android:id="@+id/profilePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageViewUserProfile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_people_24"
            android:scaleType="centerCrop"
            android:layout_marginEnd="8dp"
            android:background="@drawable/profile_pic"
           />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textViewPostdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Post_date"
            android:textSize="12sp"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/imageViewPostImage"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:src="@drawable/baseline_people_24"
        android:layout_below="@id/profilePanel"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/textViewPostContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_content"
        android:layout_below="@id/imageViewPostImage"
        android:layout_marginTop="8dp"/>


<!--    <ImageView-->
<!--        android:id="@+id/imageViewLike"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/outline_heart_plus_24"-->
<!--        android:layout_below="@id/textViewPostContent"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_alignParentEnd="true"/>-->


<!--    <ImageView-->
<!--        android:id="@+id/imageViewDislike"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/sharp_heart_minus_24"-->
<!--        android:layout_below="@id/textViewPostContent"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginHorizontal="18dp"-->
<!--        android:layout_toStartOf="@id/imageViewLike"/>-->

</RelativeLayout>
</androidx.cardview.widget.CardView>